# robusthub

./: LICENCE  README.md  alembic.ini  pyproject.toml  robusthubconf.py
alembic/: env.py
alembic/versions/: 06dc1e8ce4a9_create_usecases.py  4556382f93d1_populate_attacks.py  6f6137c73827_populate_usecases.py  7408911bf138_create_defenses_table.py  7603eb4fb584_create_models_table.py  85562fa5875a_arguments.py  8d9005e5e5cc_populate_models.py  932a0acf48c2_create_attacks_table.py  c74d88859ac3_more_models.py  d4ca2c28cf22_populate_defenses.py  d4fc66c8dd8c_create_benchmarks_table.py  d73c758c9b84_metrics.py  f8c5605de431_populate_datasets.py
dashboard/: adapter.py  app.py  config.py  config.toml  models.py  utils.py
dashboard/assets/: main.css
dashboard/models/: attack.py  benchmark.py  defense.py  model.py
dashboard/pages/: attack.py  benchmark.py  dataset.py  defense.py  home.py  model.py  usecase.py
dashboard/usecases/: dga-detection.md  image-classification.md  medical-image-reconstruction.md
docs/: attacks.bib  attacks.rst  benchmarks.rst  conf.py  datasets.bib  datasets.rst  defenses.bib  defenses.rst  index.rst  intro.rst  metrics.bib  metrics.rst  models.rst  publish.rst  threats.rst
robusthub/: __init__.py  base.py  benchmarks.py  defenses.py  metrics.py  models.py  profiler.py  robusthubconf.py  threats.py  utils.py
robusthub/attacks/: __init__.py  apgd.py  attack.py  dummy.py  pgd.py  (+2 more)
tests/: conftest.py  context.py  test_adversarial_training.py  test_benchmarks.py  test_hubconf.py  test_metrics.py  test_randomized_smoothing.py  test_threats.py
(+7 files in other folders)
