[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "RobustHub"
authors = [
    {name = "Jonathan Peck", email = "Jonathan.Peck@UGent.be"}
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "sphinx",
    "sphinx-toolbox",
    "sphinxcontrib-bibtex",
    "pytest",
    "tqdm",
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "alembic",
    "humanize",
    "scikit-image",
    "scikit-learn"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
